# SMILES-RNN

./: .gitignore  LICENSE  README.md  deep_smiles.py  environment.yml  environment_minimal.yml  fine_tune.py  playground.ipynb  pyproject.toml  randomize_smiles.py  reinforcement_learning.py  sample_model.py  setup.py  train_prior.py
model/: GTr.py  LICENSE  RL.py  __init__.py  dataset.py  gated_transformer.py  model.py  rnn.py  transformer.py  utils.py  vocabulary.py
scripts/: fine_tune.py  reinforcement_learning.py  sample_model.py  train_prior.py
smilesrnn/: RL.py  __init__.py  dataset.py  gated_transformer.py  rnn.py  transformer.py  utils.py  vocabulary.py
utility_scripts/: deep_smiles.py  randomize_smiles.py
