[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SMILES-RNN"
version = "2.0.2"
authors = [
  { name="Morgan Thomas", email="morganthomas263@gmail.com" },
]
description = "A scoring, benchmarking and evaluation framework for goal directed generative models"
keywords = ["SMILES", "Chemical language models", "De novo", "Constrained de novo", "chemistry", "drug design", "reinforcement learning"]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
  # Development status
  "Development Status :: 4 - Beta", 

  # Python
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  # Licensing
  "License :: OSI Approved :: MIT License",

  # Operating system
  "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/MorganCThomas/SMILES-RNN"
Issues = "https://github.com/MorganCThomas/SMILES-RNN/issues"
